--- a/config.yaml
+++ b/config.yaml
@@ -1,18 +1,22 @@
 data:
   conservative_path: "data/cons_data.json"
   liberal_path: "data/lib_data.json"
+  
 embedding:
   model_name: "sentence-transformers/all-mpnet-base-v2"
   batch_size: 256
   device: "cuda"
+
 topic_model:
   method: "cluster"
   cluster:
     umap_neighbors: 15
     umap_min_dist: 0.0
     hdbscan_min_cluster_size: 15
+
 analysis:
   time_interval: "Y"
+
 events:
   - name: "Election 2012"
     date: "2012-11-06"
@@ -22,7 +26,17 @@ events:
     date: "2016-11-08"
   - name: "Obergefell v. Hodges"
     date: "2015-06-26"
+
 output:
   cache_dir: "results/cache"
   plots_dir: "results/plots"
   metrics_dir: "results/metrics"
+
+openai:
+  api_key: "<YOUR_OPENAI_API_KEY>"      # or leave blank and set via ENV var
+  model: "gpt-3.5-turbo"                # or another model
+  max_terms: 10                         # how many top terms to send for naming
+
+stats:
+  trend_test: "linregress"              # type of test for time‐trend p-values
+  prepost_window: 3                     # months before/after for event tests
