--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
+data/*.json filter=lfs diff=lfs merge=lfs -text
 data/cons_data.json filter=lfs diff=lfs merge=lfs -text
 data/lib_data.json filter=lfs diff=lfs merge=lfs -text
